--- a/week1/server-two/views/index.pug
+++ b/week1/server-two/views/index.pug
@@ -1,7 +1,7 @@
 doctype html 
 html(lang='en')
   head 
-    title Title 
+    title TITLE WITH PUG
     meta(charset='utf-8')
     link(rel='stylesheet' href='./css/style.css')
   body
@@ -13,3 +13,4 @@ html(lang='en')
         img(src='./img/cat.jpg' class='big small trans')
       p Age:7 
       p Weight 5kg
+    script(src='./js/main.js')
