--- a/week1/server-two/views/page2.pug
+++ b/week1/server-two/views/page2.pug
@@ -1,10 +1,8 @@
-extends layout.pug
+extends layout.pug 
 block content
   article 
     header 
-      h2 name 
+      h1 This is page 2
     figure
       img(src='./img/cat.jpg' class='big small trans')
-    p Age:7 
-    p Weight 5kg
     
