pug with string injection

--- a/week1/server-two/views/page2.pug
+++ b/week1/server-two/views/page2.pug
@@ -2,7 +2,7 @@ extends layout.pug
 block content
   article 
     header 
-      h1 This is page 2
+      h1=page2heading
     figure
       img(src='./img/cat.jpg' class='big small trans')
     
