--- a/week1/server-two/views/layout.pug
+++ b/week1/server-two/views/layout.pug
@@ -1,10 +1,10 @@
 doctype html 
 html(lang='en')
   head 
-    title TITLE WITH PUG
+    title= title 
     meta(charset='utf-8')
     link(rel='stylesheet' href='./css/style.css')
   body
-    h1 Click on the cat
+    h1=pageheading
     block content
     script(src='./js/main.js')
